# streamer-persona-chatbot

./: .gitignore  Dockerfile  README.md  api_test.py  construct_db.py  main.py  preprocessing.py  pyproject.toml  question_augmentation.py  requirements.txt  server.py  wiki_crawler_main.py  wiki_crawler_nontable.py
augmentation/: make_test_csv.py  prompts.py  question_augmentation.py
crawler/: tool.py  wiki_crawler_main.py  wiki_crawler_nontable.py
data/: data.txt  raw_data.csv  test_data.csv  wiki_text.txt
faiss-nj/: index.faiss  index.pkl
notebook/: api_test.ipynb  augmentation.ipynb  langchain_test.ipynb  wiki_text.txt
notebook/faiss-nj/: index.faiss  index.pkl
src/: __init__.py  chatbot.py
src/augmentation/: question_augmentation.py
src/models/: configs.py  factory.py  llm.py  vector_db.py
src/preprocessing/: construct_db.py  text_processing.py
src/streaming_api/: youtube.py
src/ui/: qa_setting.py
src/utils/: vector_db.py
test/: chainlit.py  llama_test.py  multiprocessing_test_multi.py  multiprocessing_test_single.py  server_test.py  streamlit_dropdown.py
test/backend/: server_test.py  youtube_test.py
test/db/: db_test.py
test/llm/: factory_test.py  llm_test.py
vector_store/: index.faiss  index.pkl
